logs/Slang/chapter-9/9.6.3--disable_fork.sv.log
name: disable_fork
description: disable fork
should_fail: 0
tags: 9.6.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.6.3--disable_fork.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.6.3--disable_fork.sv:12:3: error: language feature not yet supported
		fork
		^~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.6.3--disable_fork.sv:17:3: error: language feature not yet supported
		disable fork;
		^~~~~~~~~~~~~
